--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
 	 <h2>fotos com meu bebezão&#129505;</h2>
 
-	 <a href="https://www.youtube.com/watch?v=rrmsJhf89MY"> <div class='imagem1'>
+	 <a href="https://www.youtube.com/watch?v=rrmsJhf89MY"> 
+	 	<div class='imagem1'>
 	 	 <img src="img/ela1.gif" width="300px">
-	 	 </a>
-</div>
+	 </a>
+		</div>
 
 </body>
 </html>
