--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>hihi</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
-
-	<a class="bottom" href="index2.html"> &#127854;</a>
-	
-	<div class='toptitle'>meu nenem</div>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    
+    <title>Feliz Natal</title>
 </head>
 <body>
-<div id="container-1">
-	<h1>eu te amo com todas minha forças</h1>
+    <button id="button"><a href="index2.html" >&#127854;</a></button>
+    <button id="button2"><a href="index3.html">&#128143;</a></button>
+    <h1 class="titulo" > Meu Nenem </h1>
+    <div id="container-1">
+        <h1>eu te amo com todas minha forças</h1>
 
+        <p>finalmente achei alguem que realmente me faça feliz,<br> 
+        graças a você eu consigo me levantar mesmo nos piores dias,<br>
+        agora com 1 ano de namoro eu possso falar foi o meu melhor ano,<br> 
+        mesmo com as brigas a gente continua se amando e vamos continuar se <br>
+        amando pra sempre, obrigado por tudo você é a melhor pessoa
+        <br>da minha vida eu te amo muito muito muito meu pudimzinho </p>
 
-	 <p>finalmente achei alguem que realmente me faça feliz,<br> graças a você eu consigo me levantar mesmo nos piores dias,<br> agora com 1 ano de namoro eu possso falar foi o meu melhor ano,<br> mesmo com as brigas a gente continua se amando e vamos continuar se <br>amando pra sempre, obrigado por tudo você pe a melhor pessoa <br>da minha vida eu te amo muito muito muito meu pudimzinho</p>
-
-	 <h2>fotos com meu bebezão&#129505;</h2>
-
-	 <a href="https://www.youtube.com/watch?v=rrmsJhf89MY"> 
-	 	<div class='imagem1'>
-	 	 <img src="img/ela1.gif" width="300px">
-	 </a>
-		</div>
-
+        <h2>fotos com meu bebezão&#129505;</h2>
+        <a href="https://www.youtube.com/watch?v=rrmsJhf89MY"><img class="ela1"src="img/ela1.gif"></a>
+    </div>
 </body>
 </html>
