--- a/index2.html
+++ b/index2.html
@@ -1,20 +1,41 @@
-<!doctype html> 
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<meta charset="utf-8">
-	<title>hihi</title>
-	<link rel="stylesheet" type="text/css" href="css/style2.css">
-	<a class="bottom" href="index.html"> &#x1F344; </a>
-
-	<div class="title-pag2">poemas para meu nene</div>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    
+    <title>Feliz Natal</title>
 </head>
 <body>
-	<div id="container-1">
-	<p>eu te amo muito vida eu amo você mais que tudo nesse mundo, você é a pessoa mais importante do mundo pra mim, eu sempre sempre vou estar com você independentemente do que acontecer, eu sempre vou querer ficar do seu lado para todas as coisas que acontecerem com você e quero te ajudar nelas, eu prometo de coração que sempre vou dar o meu melhor para ver você feliz e não triste, e to com muita saudades sua, eu espero que você consiga vir aqui no final de semana em janeiro ou quando der, mas, eu sempre vou aproveitar e adorar ficar do seu lado mesmo que seja por um curto espaço de tempo, na academia ou na escola ate mesmo na academia aqui perto, eu sempre vou adorar ficar junto com você porque você é a pessoas mais importante, especial, linda, maravilhosa e muuuiiittooo gostosa. Eu te amo mais que tudo vida e sempre vou te amar eu espero que você esteja bem.</p>
-
-	<div class="coracao">&#129505;</div>
-</div>
+    <button id="button"><a href="index.html">&#127812;</a></button>
+    <button id="button2"><a href="index3.html">&#128143;</a></button>
+    <h1 class="titulo">declaração</h1>
+    <div id="container-1">
+        <p>
+            eu te amo muito vida eu amo você mais que tudo nesse mundo,
+            você é a pessoa mais importante do mundo pra mim, eu sempre
+            sempre vou estar com você independentemente do que acontecer,
+            eu sempre vou querer ficar do seu lado para todas as coisas
+            que acontecerem com você e quero te ajudar nelas, eu prometo
+            de coração que sempre vou dar o meu melhor para ver você feliz
+            e não triste, e to com muita saudades sua, eu espero que você
+            consiga vir aqui no final de semana em janeiro ou quando der,
+            mas, eu sempre vou aproveitar e adorar ficar do seu lado mesmo
+            que seja por um curto espaço de tempo, na academia ou na escola
+            ate mesmo na academia aqui perto, eu sempre vou adorar ficar junto
+            com você porque você é a pessoas mais importante, especial, linda, 
+            maravilhosa e muuuiiittooo gostosa. Eu te amo mais que tudo vida e 
+            sempre vou te amar eu espero que você esteja bem.
+        </p>
+        <img class="bj" src="img/bjs.webp">
+        <h1 class="heart2">&#128151;</h1>
+        <h1 class="heart3">&#128151;</h1>
+        <h1 class="heart4">&#128151;</h1>
+        <h1 class="heart5">&#128151;</h1>
+        <img class="noia" src="img/noia.jpg"
+    </div>
 </body>
 </html>
